[gd_scene load_steps=31 format=3 uid="uid://5prsvwyxk8my"]

[ext_resource type="PackedScene" uid="uid://dto8b77kggjk" path="res://core/shared/scene/player/default/player.tscn" id="1_y54sx"]
[ext_resource type="Script" uid="uid://b3adqin2agi7g" path="res://core/shared/script/component/camera_component.gd" id="2_515yx"]
[ext_resource type="Script" uid="uid://hrhosip3wd52" path="res://core/shared/script/component/camera_zone_component.gd" id="3_85l6k"]
[ext_resource type="Script" uid="uid://bkqmiwjvnnsgl" path="res://core/shared/script/component/camera_zone_collider.gd" id="4_hky2r"]
[ext_resource type="Script" uid="uid://bkjqimbqdlh11" path="res://core/shared/script/component/camera_zone_transition_component.gd" id="5_3ur3a"]
[ext_resource type="Script" uid="uid://bq5juxhq4p0xs" path="res://core/shared/script/component/cameraComponent/positionTransition/camera_zone_position_transition_moving_with_behave.gd" id="6_ijngx"]
[ext_resource type="Script" uid="uid://bigad1wem8y3h" path="res://core/shared/script/component/cameraComponent/rotationTransition/camera_zone_rotation_transition_move_with_camera_rotation.gd" id="7_uk3ym"]
[ext_resource type="Script" uid="uid://d0co4qa4vlrmy" path="res://core/shared/script/component/cameraComponent/cameraBehavior/camera_zone_behavior_planar.gd" id="9_sk4e2"]
[ext_resource type="Script" uid="uid://dreqqx71ctxds" path="res://core/shared/script/component/cameraComponent/point/camera_zone_behavior_start_pos_component.gd" id="10_ca4ky"]
[ext_resource type="Script" uid="uid://bv3ft32i70plv" path="res://core/shared/script/component/cameraComponent/cameraRotation/camera_zone_rotation_look_at_player.gd" id="11_g2pwk"]
[ext_resource type="Script" uid="uid://bsqndnb8cisrj" path="res://core/shared/script/component/cameraComponent/reference/camera_zone_reference_const.gd" id="11_ijngx"]
[ext_resource type="Script" uid="uid://diwalt1vc2rlg" path="res://core/shared/script/component/pnj.gd" id="13_85l6k"]
[ext_resource type="Script" uid="uid://by87bqllajpf5" path="res://core/shared/script/component/repulse_handler.gd" id="14_3ur3a"]
[ext_resource type="Script" uid="uid://bd5jdx213mojl" path="res://core/shared/script/component/repusle_handler_zone.gd" id="15_ijngx"]
[ext_resource type="PackedScene" uid="uid://b6hqyg8jmhar8" path="res://editor/testFolder/fpscounter.tscn" id="16_ijngx"]
[ext_resource type="Script" uid="uid://blyl88bltf4nu" path="res://core/shared/script/component/quest_component.gd" id="16_uk3ym"]
[ext_resource type="Script" uid="uid://b8vkkw2it1d4c" path="res://core/shared/script/component/dialogue_manager.gd" id="17_uk3ym"]
[ext_resource type="Script" uid="uid://dphe2yd20nunf" path="res://core/shared/script/component/dialogue_group.gd" id="18_2pdfk"]
[ext_resource type="Script" uid="uid://xu6i4ab7dy4b" path="res://core/shared/script/component/dialogue_action_component.gd" id="19_sk4e2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_y54sx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_515yx"]
sky_material = SubResource("ProceduralSkyMaterial_y54sx")

[sub_resource type="Environment" id="Environment_85l6k"]
background_mode = 2
sky = SubResource("Sky_515yx")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y0vdg"]
albedo_color = Color(0.768627, 1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_dfdvx"]
material = SubResource("StandardMaterial3D_y0vdg")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_y54sx"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1hx2k"]
size = Vector3(27.644, 3.18469, 52.2405)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uk3ym"]
height = 2.76587
radius = 4.12646

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2pdfk"]
albedo_color = Color(1, 0.435294, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_sk4e2"]
material = SubResource("StandardMaterial3D_2pdfk")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ca4ky"]

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_85l6k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(39.8657, 0, 0, 0, 14.8058, 0, 0, 0, 27.049, 0.140354, 0.164168, -0.0748997)
mesh = SubResource("PlaneMesh_dfdvx")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_y54sx")

[node name="CharacterBody3D" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("1_y54sx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0429602, 1.10842, -0.0411148)
camera = NodePath("../theBestCameraEver")

[node name="theBestCameraEver" type="Camera3D" parent="."]
script = ExtResource("2_515yx")
deadZoneCoordinates = Vector4(0.3, 0.7, 0.3, 0.7)
metadata/_custom_type_script = "uid://b3adqin2agi7g"

[node name="cameraZone" type="Area3D" parent="." node_paths=PackedStringArray("collider", "behavior", "transition", "reference", "cameraTurner")]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_85l6k")
collider = NodePath("cameraZoneCollider")
behavior = NodePath("cameraZoneBehaviorPlanar")
transition = NodePath("cameraZoneTransition")
reference = NodePath("cameraZoneReferenceConst")
cameraTurner = NodePath("cameraRotationLookAtPlayer")
color = Color(1, 1, 0, 0.203922)
metadata/_custom_type_script = "uid://hrhosip3wd52"

[node name="cameraZoneCollider" type="CollisionShape3D" parent="cameraZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.34991, 1.09235, -0.1157)
shape = SubResource("BoxShape3D_1hx2k")
script = ExtResource("4_hky2r")
metadata/_custom_type_script = "uid://bkqmiwjvnnsgl"

[node name="cameraZoneTransition" type="Node3D" parent="cameraZone" node_paths=PackedStringArray("rotationTransition", "positionTransition")]
script = ExtResource("5_3ur3a")
speed = 10.0
rotationSpeed = 0.05
rotationTransition = NodePath("cameraZoneRotationTransitionConstant")
positionTransition = NodePath("cameraZonePositionTansitionMovingWithBehave")
metadata/_custom_type_script = "uid://bkjqimbqdlh11"

[node name="cameraZonePositionTansitionMovingWithBehave" type="Node3D" parent="cameraZone/cameraZoneTransition" node_paths=PackedStringArray("behavior")]
script = ExtResource("6_ijngx")
behavior = NodePath("../../cameraZoneBehaviorPlanar")
metadata/_custom_type_script = "uid://bq5juxhq4p0xs"

[node name="cameraZoneRotationTransitionConstant" type="Node3D" parent="cameraZone/cameraZoneTransition"]
script = ExtResource("7_uk3ym")

[node name="cameraZoneBehaviorPlanar" type="Node3D" parent="cameraZone" node_paths=PackedStringArray("point1", "point2")]
transform = Transform3D(-3.40166e-08, -2.74509e-08, -1, -0.628004, 0.77821, -1.3027e-15, 0.77821, 0.628004, -4.37114e-08, 0.664267, 6.99348, 9.08073)
script = ExtResource("9_sk4e2")
point1 = NodePath("cameraZoneBehaviorPlanarPoint")
point2 = NodePath("cameraZoneBehaviorPlanarPoint2")
x = Vector3(-1, 0, 0)
y = Vector3(-5.96046e-08, -0.628004, 0.77821)
metadata/_custom_type_script = "uid://d0co4qa4vlrmy"

[node name="cameraZoneBehaviorPlanarPoint" type="Marker3D" parent="cameraZone/cameraZoneBehaviorPlanar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
script = ExtResource("10_ca4ky")
metadata/_custom_type_script = "uid://dreqqx71ctxds"

[node name="cameraZoneBehaviorPlanarPoint2" type="Marker3D" parent="cameraZone/cameraZoneBehaviorPlanar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
script = ExtResource("10_ca4ky")
metadata/_custom_type_script = "uid://dreqqx71ctxds"

[node name="cameraRotationLookAtPlayer" type="Node3D" parent="cameraZone"]
script = ExtResource("11_g2pwk")

[node name="cameraZoneReferenceConst" type="Node3D" parent="cameraZone"]
transform = Transform3D(1, 0, 0, 0, 0.724244, 0.689544, 0, -0.689544, 0.724244, 0, 0, 0)
script = ExtResource("11_ijngx")
metadata/_custom_type_script = "uid://bsqndnb8cisrj"

[node name="Label" parent="." instance=ExtResource("16_ijngx")]

[node name="Quest" type="Node3D" parent="." node_paths=PackedStringArray("dialogueManagerComponent")]
script = ExtResource("16_uk3ym")
questName = "test"
dialogueManagerComponent = NodePath("dialogueManager")
metadata/_custom_type_script = "uid://blyl88bltf4nu"

[node name="pnj" type="Node3D" parent="Quest" node_paths=PackedStringArray("isPlayerIsNearby")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6959, 0, 0)
script = ExtResource("13_85l6k")
isPlayerIsNearby = NodePath("Area3D")
metadata/_custom_type_script = "uid://diwalt1vc2rlg"

[node name="Area3D" type="Area3D" parent="Quest/pnj"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Quest/pnj/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60681, 0)
shape = SubResource("CylinderShape3D_uk3ym")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Quest/pnj"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999231, 0)
mesh = SubResource("CylinderMesh_sk4e2")

[node name="repulseHandler" type="Node3D" parent="Quest/pnj" node_paths=PackedStringArray("collider")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999047, 0)
script = ExtResource("14_3ur3a")
force = 0.42
collider = NodePath("Area3D/repulseHandlerZone")
metadata/_custom_type_script = "uid://by87bqllajpf5"

[node name="Area3D" type="Area3D" parent="Quest/pnj/repulseHandler"]
collision_layer = 4
collision_mask = 0

[node name="repulseHandlerZone" type="CollisionShape3D" parent="Quest/pnj/repulseHandler/Area3D"]
shape = SubResource("CylinderShape3D_ca4ky")
script = ExtResource("15_ijngx")
metadata/_custom_type_script = "uid://bd5jdx213mojl"

[node name="dialogueManager" type="Node3D" parent="Quest"]
script = ExtResource("17_uk3ym")
metadata/_custom_type_script = "uid://b8vkkw2it1d4c"

[node name="dialogueGroup" type="Node3D" parent="Quest/dialogueManager"]
script = ExtResource("18_2pdfk")
metadata/_custom_type_script = "uid://dphe2yd20nunf"

[node name="dialogueActionComponent" type="Node3D" parent="Quest/dialogueManager/dialogueGroup"]
script = ExtResource("19_sk4e2")
metadata/_custom_type_script = "uid://xu6i4ab7dy4b"

[connection signal="body_entered" from="cameraZone" to="cameraZone" method="_on_body_entered"]
